Fix background/border issues on safari.

--- a/ui/appui-react/src/appui-react/toolbar/new-toolbars/Surface.scss
+++ b/ui/appui-react/src/appui-react/toolbar/new-toolbars/Surface.scss
@@ -10,6 +10,8 @@
   transition: border-color var(--iui-duration-1) ease;
   // TODO: needed due to opacity on toolbar container (since pointer events are disabled for center content).
   pointer-events: all;
+  // TODO: fixes an issues on Safari where borders and backgrounds are overlapped by the viewport.
+  position: relative;
 
   @supports (backdrop-filter: blur(5px)) {
     background-color: hsl(
